--- a/manual/overview.html
+++ b/manual/overview.html
@@ -53,7 +53,8 @@
     <ul class="manual-toc">
       
     <li data-ice="manualNav" class="indent-h1"><span class="manual-dot"></span><a href="manual/tutorial.html#tutorial" data-ice="link">Tutorial</a></li>
-<li data-ice="manualNav" class="indent-h3"><span class="manual-dot"></span><a href="manual/tutorial.html#providers" data-ice="link">Providers</a></li>
+<li data-ice="manualNav" class="indent-h3"><span class="manual-dot"></span><a href="manual/tutorial.html#content-providers" data-ice="link">Content Providers</a></li>
+<li data-ice="manualNav" class="indent-h3"><span class="manual-dot"></span><a href="manual/tutorial.html#kat-providers" data-ice="link">KAT Providers</a></li>
 <li data-ice="manualNav" class="indent-h3"><span class="manual-dot"></span><a href="manual/tutorial.html#folder-structure" data-ice="link">Folder structure</a></li>
 <li data-ice="manualNav" class="indent-h3"><span class="manual-dot"></span><a href="manual/tutorial.html#versioning" data-ice="link">Versioning</a></li>
 </ul>
@@ -119,7 +120,7 @@
 <p><a href="https://travis-ci.org/popcorn-official/popcorn-api"><img src="https://travis-ci.org/popcorn-official/popcorn-api.svg?branch=master" alt="Build Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api"><img src="https://david-dm.org/popcorn-official/popcorn-api.svg" alt="Dependency Status"></a>
 <a href="https://david-dm.org/popcorn-official/popcorn-api#info=devDependencies"><img src="https://david-dm.org/popcorn-official/popcorn-api/dev-status.svg" alt="devDependency Status"></a>
-<a href=""><img src="https://github.com/popcorn-official/popcorn-api/docs/badge.svg" alt="document"></a></p>
+<a href="https://chrisalderson.github.io/source.html"><img src="https://chrisalderson.github.io/badge.svg" alt="document"></a></p>
 <p>Popcorn API is developed to make it easier for anyone to create their own version of <a href="http://popcorntime.sh">Popcorn Time</a>. It contains:</p>
 <ul>
 <li>Metadata about movies (taken from Trakt).</li>
